--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/AI%20generated%20Img%20Targets.mind"
+      mindar-image="imageTargetSrc: https://github.com/e16ai/electricalcircuit/blob/main/AI%20generated%20Img%20Targets.mind"
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
@@ -30,7 +30,7 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/switch.glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/switch.glb"
           class="clickable"
         ></a-gltf-model>
         <a-gltf-model
@@ -38,7 +38,7 @@
           rotation="-90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/switch.glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/switch.glb"
           visible="false"
         ></a-gltf-model>
         <a-entity
@@ -55,7 +55,7 @@
           rotation="90 0 0"
           position="0.5 0 0.5"
           scale="0.05 0.05 0.05"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/circuit%20WITHOUT%20SWITCHH.glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/switch.glb"
         ></a-gltf-model>
       </a-entity>
       <a-entity mindar-image-target="targetIndex: 1">
@@ -64,14 +64,14 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/circuit%20WITH%20SWITCHH(polarity).glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/circuit%20WITH%20SWITCHH(polarity).glb"
         ></a-gltf-model>
         <a-gltf-model
           id="model_6"
           rotation="90 90 90"
           position="0.89 0.3 0.58"
           scale="0.06 0.06 0.06"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/battery-cell.glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/battery-cell.glb"
           class="clickable"
         ></a-gltf-model>
         <a-sphere
@@ -94,14 +94,14 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.05 0.05 0.05"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/c19adab4030ee09f4d39fb9f8acadf12b7d70f47/circuit%20WITH%20SWITCHH%20(brightness).glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/circuit%20WITH%20SWITCHH%20(brightness).glb"
         ></a-gltf-model>
         <a-gltf-model
           id="model_8"
           rotation="90 90 90"
           position="0.58 -0.040 0.59"
           scale="0.05 0.05 0.05"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/battery-cell.glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/battery-cell.glb"
           visible="false"
           class="clickable"
         ></a-gltf-model>
