--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
   <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-event-set-component@5.0.1/dist/aframe-event-set-component.min.js"></script>
+  
+  <style>
+    body {
+      margin: 0;
+      background-color: black;
+    }
+
+    a-scene {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   </head>
+  
   <body>
     <a-scene
       mindar-image="imageTargetSrc: https://github.com/e16ai/electricalcircuit/blob/main/AI%20generated%20Img%20Targets.mind"
