--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: https://github.com/e16ai/electricalcircuit/blob/main/AI%20generated%20Img%20Targets.mind"
+      mindar-image="imageTargetSrc: https://github.com/e16ai/electricalcircuit/blob/main/AIgeneratedImgTargets.mind"
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
@@ -80,7 +80,7 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/circuit%20WITH%20SWITCHH(polarity).glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/circuitWITHSWITCH(polarity).glb"
         ></a-gltf-model>
         <a-gltf-model
           id="model_6"
@@ -110,7 +110,7 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.05 0.05 0.05"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/circuit%20WITH%20SWITCHH%20(brightness).glb"
+          src="https://github.com/e16ai/electricalcircuit/blob/main/circuitWITHSWITCH(brightness).glb"
         ></a-gltf-model>
         <a-gltf-model
           id="model_8"
