--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: https://github.com/e16ai/electricalcircuit/blob/main/AIgeneratedImgTargets.mind"
+      mindar-image="imageTargetSrc: https://raw.githubusercontent.com/e16ai/electricalcircuit/main/AIgeneratedImgTargets.mind"
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
@@ -46,7 +46,7 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/switch.glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/switch.glb"
           class="clickable"
         ></a-gltf-model>
         <a-gltf-model
@@ -54,7 +54,7 @@
           rotation="-90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/switch.glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/switch.glb"
           visible="false"
         ></a-gltf-model>
         <a-entity
@@ -71,7 +71,7 @@
           rotation="90 0 0"
           position="0.5 0 0.5"
           scale="0.05 0.05 0.05"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/switch.glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/switch.glb"
         ></a-gltf-model>
       </a-entity>
       <a-entity mindar-image-target="targetIndex: 1">
@@ -80,14 +80,14 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.25 0.25 0.25"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/circuitWITHSWITCH(polarity).glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/circuitWITHSWITCH(polarity).glb"
         ></a-gltf-model>
         <a-gltf-model
           id="model_6"
           rotation="90 90 90"
           position="0.89 0.3 0.58"
           scale="0.06 0.06 0.06"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/battery-cell.glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/battery-cell.glb"
           class="clickable"
         ></a-gltf-model>
         <a-sphere
@@ -110,14 +110,14 @@
           rotation="90 90 90"
           position="0.27 -0.2 0.5"
           scale="0.05 0.05 0.05"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/circuitWITHSWITCH(brightness).glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/circuitWITHSWITCH(brightness).glb"
         ></a-gltf-model>
         <a-gltf-model
           id="model_8"
           rotation="90 90 90"
           position="0.58 -0.040 0.59"
           scale="0.05 0.05 0.05"
-          src="https://github.com/e16ai/electricalcircuit/blob/main/battery-cell.glb"
+          src="https://raw.githubusercontent.com/e16ai/electricalcircuit/main/battery-cell.glb"
           visible="false"
           class="clickable"
         ></a-gltf-model>
