--- a/index.html
+++ b/index.html
@@ -1,180 +1,116 @@
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-event-set-component@5.0.1/dist/aframe-event-set-component.min.js"></script>
-  </head>
-  <body>
-    <a-scene
-      mindar-image="imageTargetSrc: https://drive.google.com/file/d/1BC7NcptLpiW2UFnx4wNJOW_97u4s7r3A/view?usp=drive_link"
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: false"
-      filtermincf="0.001"
-      filterbeta="0.01"
-    >
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity
-        camera
-        look-controls
-        cursor="rayOrigin: mouse"
-        raycaster="objects: .clickable; far: 100000"
-      >
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/aframe-event-set-component@5.0.1/dist/aframe-event-set-component.min.js"></script>
+</head>
+
+<body>
+  <a-scene mindar-image="imageTargetSrc: ./AIgeneratedImgTargets.mind" color-space="sRGB"
+    renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: false" filtermincf="0.001" filterbeta="0.01">
+    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-entity camera look-controls cursor="rayOrigin: mouse" raycaster="objects: .clickable; far: 100000">
+    </a-entity>
+    <a-entity mindar-image-target="targetIndex: 0">
+      <a-gltf-model id="model_1" rotation="90 90 90" position="0.27 -0.2 0.5" scale="0.25 0.25 0.25" src="./switch.glb"
+        class="clickable"></a-gltf-model>
+      <a-gltf-model id="model_2" rotation="-90 90 90" position="0.27 -0.2 0.5" scale="0.25 0.25 0.25" src="./switch.glb"
+        visible="false"></a-gltf-model>
+      <a-entity id="model_3" geometry="primitive: sphere; radius: 0.05;"
+        material="color: red; roughness: 0.2; metalness: 1; transparent: false; opacity: 1;" rotation="10 0 0"
+        position="-0.45 -0.15 0.55" visible="false">
       </a-entity>
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model
-          id="model_1"
-          rotation="90 90 90"
-          position="0.27 -0.2 0.5"
-          scale="0.25 0.25 0.25"
-          src="switch.glb"
-          class="clickable"
-        ></a-gltf-model>
-        <a-gltf-model
-          id="model_2"
-          rotation="-90 90 90"
-          position="0.27 -0.2 0.5"
-          scale="0.25 0.25 0.25"
-          src="switch.glb"
-          visible="false"
-        ></a-gltf-model>
-        <a-entity
-          id="model_3"
-          geometry="primitive: sphere; radius: 0.05;"
-          material="color: red; roughness: 0.2; metalness: 1; transparent: false; opacity: 1;"
-          rotation="10 0 0"
-          position="-0.45 -0.15 0.55"
-          visible="false"
-        >
-        </a-entity>
-        <a-gltf-model
-          id="model_4"
-          rotation="90 0 0"
-          position="0.5 0 0.5"
-          scale="0.05 0.05 0.05"
-          src="circuitWITHOUTSWITCH.glb"
-        ></a-gltf-model>
-      </a-entity>
-      <a-entity mindar-image-target="targetIndex: 1">
-        <a-gltf-model
-          id="model_5"
-          rotation="90 90 90"
-          position="0.27 -0.2 0.5"
-          scale="0.25 0.25 0.25"
-          src="circuitWITH%20SWITCH(polarity).glb"
-        ></a-gltf-model>
-        <a-gltf-model
-          id="model_6"
-          rotation="90 90 90"
-          position="0.89 0.3 0.58"
-          scale="0.06 0.06 0.06"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/battery-cell.glb"
-          class="clickable"
-        ></a-gltf-model>
-        <a-sphere
-          id="toggle_sphere"
-          rotation="10 0 0"
-          position="-0.59 -0.075 0.55"
-          radius="0.05"
-          color="red"
-          roughness="0.2"
-          metalness="1"
-          transparent="false"
-          opacity="1"
-          visible="false"
-        >
-        </a-sphere>
-      </a-entity>
-      <a-entity mindar-image-target="targetIndex: 2">
-        <a-gltf-model
-          id="model_7"
-          rotation="90 90 90"
-          position="0.27 -0.2 0.5"
-          scale="0.05 0.05 0.05"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/c19adab4030ee09f4d39fb9f8acadf12b7d70f47/circuit%20WITH%20SWITCHH%20(brightness).glb"
-        ></a-gltf-model>
-        <a-gltf-model
-          id="model_8"
-          rotation="90 90 90"
-          position="0.58 -0.040 0.59"
-          scale="0.05 0.05 0.05"
-          src="https://github.com/Abhinav683637/Abhinav683637.github.io/blob/7ddd319f5d7ef971c4a75cf12a3f742bed479620/battery-cell.glb"
-          visible="false"
-          class="clickable"
-        ></a-gltf-model>
-        <a-sphere
-          id="translucent_sphere"
-          position="-0.68 -0.27 0.55"
-          radius="0.127"
-          color="white"
-          opacity="0.8"
-          visible="false"
-        ></a-sphere>
-      </a-entity>
-    </a-scene>
-    <script>
-      // Get references to the models
-      const model_1 = document.querySelector("#model_1");
-      const model_2 = document.querySelector("#model_2");
-      const model_3 = document.querySelector("#model_3");
+      <a-gltf-model id="model_4" rotation="90 0 0" position="0.5 0 0.5" scale="0.05 0.05 0.05"
+        src="./circuitWITHOUTSWITCH.glb"></a-gltf-model>
+    </a-entity>
+    <a-entity mindar-image-target="targetIndex: 1">
+      <a-gltf-model id="model_5" rotation="90 90 90" position="0.27 -0.2 0.5" scale="0.25 0.25 0.25"
+        src="./circuitWITHSWITCHH(polarity).glb" class="clickable"></a-gltf-model>
+      <a-gltf-model id="model_6" rotation="90 90 90" position="0.89 0.3 0.58" scale="0.06 0.06 0.06"
+        src="./battery-cell.glb" class="clickable"></a-gltf-model>
+      <a-sphere id="toggle_sphere" rotation="10 0 0" position="-0.59 -0.075 0.55" radius="0.05" color="red"
+        roughness="0.2" metalness="1" transparent="false" opacity="1" visible="false">
+      </a-sphere>
+    </a-entity>
+    <a-entity mindar-image-target="targetIndex: 2">
+      <a-gltf-model id="model_7" rotation="90 90 90" position="0.27 -0.2 0.5" scale="0.05 0.05 0.05"
+        src="./circuitWITHSWITCH(brightness).glb" class="clickable"></a-gltf-model>
+      <a-gltf-model id="model_8" rotation="90 90 90" position="0.58 -0.040 0.59" scale="0.05 0.05 0.05"
+        src="./battery-cell.glb" visible="false" class="clickable"></a-gltf-model>
+      <a-sphere id="translucent_sphere" position="-0.68 -0.27 0.55" radius="0.127" color="white" opacity="0.8"
+        visible="false"></a-sphere>
+    </a-entity>
+  </a-scene>
+  <script>
+    // Get references to the models
+    const model_1 = document.querySelector("#model_1");
+    const model_2 = document.querySelector("#model_2");
+    const model_3 = document.querySelector("#model_3");
 
-      // Function to toggle visibility
-      const toggleModels = () => {
-        const isModel1Visible = model_1.getAttribute("visible");
+    // Function to toggle visibility
+    const toggleModels = () => {
+      const isModel1Visible = model_1.getAttribute("visible");
 
-        // Toggle visibility of model_1 and model_2
-        model_1.setAttribute("visible", !isModel1Visible);
-        model_2.setAttribute("visible", isModel1Visible);
+      // Toggle visibility of model_1 and model_2
+      model_1.setAttribute("visible", !isModel1Visible);
+      model_2.setAttribute("visible", isModel1Visible);
 
-        // Show model_3 only when model_2 is visible (i.e., model_1 is hidden)
-        model_3.setAttribute("visible", isModel1Visible);
-      };
+      // Show model_3 only when model_2 is visible (i.e., model_1 is hidden)
+      model_3.setAttribute("visible", isModel1Visible);
+    };
 
-      // Add event listeners to toggle visibility on click
-      model_1.addEventListener("click", toggleModels);
-      model_2.addEventListener("click", toggleModels);
-    </script>
+    // Add event listeners to toggle visibility on click
+    model_1.addEventListener("click", toggleModels);
+    model_2.addEventListener("click", toggleModels);
+  </script>
 
-    <script>
-      // Reference to Model_6 and the sphere
-      const model6 = document.querySelector("#model_6");
-      const sphere = document.querySelector("#toggle_sphere");
+  <script>
+    // Reference to Model_6 and the sphere
+    const model6 = document.querySelector("#model_6");
+    const model5 = document.querySelector("#model_5");
+    const sphere = document.querySelector("#toggle_sphere");
 
-      // State to track rotation of Model_6
-      let isRotated = false;
+    // State to track rotation of Model_6
+    let isRotated = false;
 
-      // Click event listener for Model_6
-      model6.addEventListener("click", () => {
-        // Toggle sphere visibility
-        const isVisible = sphere.getAttribute("visible");
-        sphere.setAttribute("visible", !isVisible);
+    const togglePolarity = () => {
+      // Toggle sphere visibility
+      const isVisible = sphere.getAttribute("visible");
+      sphere.setAttribute("visible", !isVisible);
 
-        // Toggle rotation of Model_6
-        isRotated = !isRotated;
-        model6.setAttribute("rotation", isRotated ? "0 0 180" : "0 0 0");
-      });
-    </script>
-    <script>
-      // References to models
-      const model7 = document.querySelector("#model_7");
-      const model8 = document.querySelector("#model_8");
-      const translucentSphere = document.querySelector("#translucent_sphere");
+      // Toggle rotation of Model_6
+      isRotated = !isRotated;
+      model6.setAttribute("rotation", isRotated ? "0 0 180" : "0 0 0");
+    };
 
-      // Function to toggle visibility of model_8 and translucent sphere
-      const toggleVisibility = () => {
-        const isModel8Visible = model8.getAttribute("visible");
-        model8.setAttribute("visible", !isModel8Visible);
-        translucentSphere.setAttribute("visible", !isModel8Visible); // Sync translucent sphere visibility
-      };
+    // Click event listener for Model_6 and Model_5
+    model6.addEventListener("click", togglePolarity);
+    model5.addEventListener("click", togglePolarity);
+  </script>
+  <script>
+    // References to models
+    const model7 = document.querySelector("#model_7");
+    const model8 = document.querySelector("#model_8");
+    const translucentSphere = document.querySelector("#translucent_sphere");
 
-      // Add click event listener to model_7 to toggle visibility
-      model7.addEventListener("click", toggleVisibility);
+    // Function to toggle visibility of model_8 and translucent sphere
+    const toggleVisibility = () => {
+      const isModel8Visible = model8.getAttribute("visible");
+      model8.setAttribute("visible", !isModel8Visible);
+      translucentSphere.setAttribute("visible", !isModel8Visible); // Sync translucent sphere visibility
+    };
 
-      // Add click event listener to model_8 (optional)
-      model8.addEventListener("click", toggleVisibility);
-    </script>
-  </body>
+    // Add click event listener to model_7 to toggle visibility
+    model7.addEventListener("click", toggleVisibility);
+
+    // Add click event listener to model_8 (optional)
+    model8.addEventListener("click", toggleVisibility);
+  </script>
+</body>
+
 </html>
